# zenlink

./: .gitignore  README.md  index.html  package.json
.github/workflows/: build.yml
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CopilotOverlay.jsx
zenlink/: .gitignore  README.md  index.html  package.json
zenlink/.github/workflows/: build.yml
zenlink/src/: App.jsx  styles.css
zenlink/src-tauri/: Cargo.toml  tauri.conf.json
zenlink/src-tauri/src/: main.rs
zenlink/src/components/: CopilotOverlay.jsx
