[package]
name = "zenlink"
version = "0.1.0"
description = "AI-powered WhatsApp companion overlay"
authors = ["vplui-projects"]
edition = "2021"

[lib]
name = "zenlink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "zenlink"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"