[package]
name = "zenlink"
version = "0.1.0"
description = "AI-powered WhatsApp companion overlay"
authors = ["Valley"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
